src/main/java/com/example/library_application/errors/exeptions/BookTakeException.java
package com.example.library_application.errors.exeptions;

public class BookTakeException extends RuntimeException {
    public BookTakeException(String message) {
        super(message);
    }
}
